add_executable(colocking_benchmarks colocking.cpp)
target_include_directories(colocking_benchmarks PUBLIC include)
target_link_libraries(colocking_benchmarks PRIVATE libcoro4spdk)

add_executable(posixlocking_benchmarks posixlocking.cpp)
target_include_directories(posixlocking_benchmarks PUBLIC include)
target_link_libraries(posixlocking_benchmarks PRIVATE pthread)
